<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Созидатели</string>
    <string name="app_default_notification_channel_name">Уведомления</string>
    <string name="app_default_url_sozidateli_name">Sozidateli.ru</string>
    <string name="sans_serif">sans-serif</string>
    <string name="sans_serif_light">sans-serif-light</string>
    <string name="sans_serif_regular">sans-serif-regular</string>
    <string name="sans_serif_condensed">sans-serif-condensed</string>
    <string name="sans_serif_thin">sans-serif-thin</string>
    <string name="sans_serif_medium">sans-serif-medium</string>
    <string name="content_description_avatar">Аватар</string>
    <string name="content_description_edit">Изменить</string>
    <string name="content_description_delete">Удалить</string>
    <string name="content_description_logo">@string/app_name</string>
    <string name="content_description_facebook">Facebook</string>
    <string name="content_description_vk">Vk</string>
    <string name="content_description_ok">Одноклассники</string>
    <string name="content_description_close">Закрыть</string>
    <string name="events_tabs_title">Мероприятия</string>
    <string name="tab_recommended_title">Что посетить?</string>
    <string name="tab_recommended_subtitle">Рекомендуемые мероприятия</string>
    <string name="tab_organizations_title">Организаторы</string>
    <string name="my_events_title">Мои мероприятия</string>
    <string name="my_timetable_title">Моё расписание</string>
    <string name="my_events_accepted">Участие подтверждено</string>
    <string name="my_events_pending">Заявка на рассмотрении</string>
    <string name="my_events_declined">Заявка не подтверждена</string>
    <string name="organizations_favorites">Избранное</string>
    <string name="organizations">Организации</string>
    <string name="blank_list_error">Увы…</string>
    <string name="organizations_favorites_empty_list_description">Пока Вы не добавили ни одной организации. \nДобавьте организации в избранное, чтобы первым узнавать об их новых мероприятиях</string>
    <string name="events_favorites_empty_list_description">Пока Вы не добавили ни одного мероприятия. \nДобавьте мероприятия в избранное, чтобы получать быстрый доступ и следить за их статусами</string>
    <string name="user_favorites_empty_list_description">Пока Вы не добавили ни одного пользователя. \nДобавьте пользователей в избранное, чтобы иметь быстрый доступ к важным для Вас людям</string>
    <string name="event_status_approved">Заявка одобрена</string>
    <string name="event_status_approved_new">Участие подтверждено</string>
    <string name="event_status_wait_confirmation">Заявка на рассмотрении</string>
    <string name="event_status_wait_confirmation_short">На рассмотрении</string>
    <string name="event_status_finished">Мероприятие завершено</string>
    <string name="event_status_decline">Заявка отклонена</string>
    <string name="event_status_decline_new">Участие не подтверждено</string>
    <string name="event_status_cancelled">Мероприятие отменено</string>
    <string name="event_action_show_event">Перейти в мероприятие</string>
    <string name="event_action_write_to_organisation">Написать организатору</string>
    <string name="event_action_participate">Участвовать</string>
    <string name="event_action_cancel_request">Отозвать заявку</string>
    <string name="event_action_closed_request">Прием заявок закрыт</string>
    <string name="event_action_subscribe_request">Уведомить о старте приема заявок</string>
    <string name="event_action_unsubscribe_request">Не уведомлять о старте приема заявок</string>
    <string name="event_action_was_sent_request">Подана заявка</string>
    <string name="auth_title_login">Присоединяйтесь\nк сообществу лидеров\nсоциальных проектов</string>
    <string name="auth_web_title_login">Подтвердите вход по QR-коду в личный кабинет на сайте sozidateli.ru</string>
    <string name="auth_with_social_network">С помощью социальных сетей</string>
    <string name="auth_with_email">С помощью электронной почты</string>
    <string name="auth_or_login">Уже есть аккаунт?</string>
    <string name="or_auth_in_one_click">Или войдите в один клик</string>
    <string name="auth_create_new_account">Создать новый аккаунт</string>
    <string name="auth_create_new_account_and_bind">Зарегистрироваться через VK ID</string>
    <string name="auth_label_login">Войти</string>
    <string name="auth_label_create">Создать</string>
    <string name="auth_label_login_with_vk">Войти через VK ID</string>
    <string name="auth_label_login_with_gos">Войти через Госуслуги</string>
    <string name="auth_title_login_fragment">Вход</string>
    <string name="email">E-mail</string>
    <string name="login">Логин</string>
    <string name="email_or_phone">E-mail или телефон</string>
    <string name="email_or_phone_hint">Номер телефона или email</string>
    <string name="auth_login">Укажите логин</string>
    <string name="auth_forgot_password">Забыли пароль?</string>
    <string name="auth_input_login">Введите логин</string>
    <string name="auth_login_with_email">Введите электронную почту или номер телефона</string>
    <string name="auth_login_with_sn">Войдите с помощью учетной записи социальной сети</string>
    <string name="auth_register">Регистрация</string>
    <string name="auth_register_sn">Подтвердите ваши данные</string>
    <string name="auth_recovery_email_error">Пожалуйста, убедитесь, что указали правильный e-mail или номер телефона и повторите попытку</string>
    <string name="auth_create_account">Создать аккаунт</string>
    <string name="auth_hint_password_strong_1">-6 знаков</string>
    <string name="auth_hint_password_strong_2">-Не менее 1 заглавной буквы</string>
    <string name="auth_hint_password_strong_3">-Не менее 1 символа</string>
    <string name="auth_register_confirm_email_title">Ура, Вы почти достигли своей цели!</string>
    <string name="auth_register_confirm_email_message">Всего один шаг отделяет Вас от возможностей портала «Созидатели». Проверьте свою почту, там уже ожидает письмо для завершения регистрации.\n\nЕсли Вы не найдете его в папке «Входящие», загляните в «Спам». Но если и в этом случае письмо не обнаружено, обратитесь в службу поддержки %s</string>
    <string name="auth_register_confirm_email_timer">Повторная отправка возможна\nчерез %s</string>
    <string name="auth_register_confirm_email_timer_two">Повторная отправка возможна через %s</string>
    <string name="auth_register_confirm_phone_timer">Повторный звонок возможен через %s</string>
    <string name="auth_register_confirm_resend">Отправить письмо повторно</string>
    <string name="auth_register_wrong_password_error">Упс… Данные для входа неверные.</string>
    <string name="auth_input_first_name_hint">Укажите Ваше имя</string>
    <string name="auth_input_last_name_hint">Укажите Вашу фамилию</string>
    <string name="auth_input_middle_name_hint">Укажите Ваше отчество</string>
    <string name="auth_input_email_hint">Укажите Вашу электронную почту</string>
    <string name="auth_input_email_or_phone_title">Введите телефон или email</string>
    <string name="auth_input_email_or_phone_hint">Мобильный телефон или e-mail</string>
    <string name="auth_input_email_again_hint">Введите e-mail повторно</string>
    <string name="auth_input_password_hint">Пароль</string>
    <string name="auth_input_password_confirm_hint">Повтор пароля</string>
    <string name="auth_agree_user_agreement">Согласен с пользовательским соглашением</string>
    <string name="auth_agree_address">https://www.sozidateli.ru/politics</string>
    <string name="auth_register_with_sn">или зарегистрируйтесь с помощью соцсети</string>
    <string name="auth_action_register">Зарегистрироваться</string>
    <string name="auth_register_finish">Пожалуйста, завершите регистрацию</string>
    <string name="auth_action_continue">Далее</string>
    <string name="auth_error_no_first_name">Введите имя</string>
    <string name="auth_error_no_last_name">Введите фамилию</string>
    <string name="auth_error_wrong_email">Введите корректный e-mail</string>
    <string name="auth_error_wrong_login">Пожалуйста, укажите корректный логин</string>
    <string name="auth_error_no_password">Введите пароль</string>
    <string name="auth_error_short_password_length">Пароль должен содержать больше 5 символов</string>
    <string name="auth_error_short_password">Больше 5 символов</string>
    <string name="auth_error_password_do_not_match">Пароли не совпадают</string>
    <string name="chat_list">Чаты</string>
    <string name="search_filter_specialization">Специализация</string>
    <string name="event_tab_my_schedule">Расписание</string>
    <string name="event_tab_schedule">События</string>
    <string name="event_tab_about">О мероприятии</string>
    <string name="event_tab_map">Карта</string>
    <string name="event_tab_to_list">К списку</string>
    <string name="profile_current_user_label">Профиль</string>
    <string name="profile_phone_mobile">Мобильный телефон</string>
    <string name="profile_phone_work">Рабочий телефон</string>
    <string name="profile_site">Сайт</string>
    <string name="profile_sn_add">Добавить соцсеть</string>
    <string name="profile_education_level">Уровень образования</string>
    <string name="profile_degrees_level">Ученая степень и/или звание</string>
    <string name="profile_show_in_profile">Отображать в профиле</string>
    <string name="profile_password_change">Сменить пароль</string>
    <string name="edit_title">Редактировать</string>
    <string name="profile_edit_user_surname">Укажите Вашу фамилию</string>
    <string name="profile_edit_user_name">Укажите Ваше имя</string>
    <string name="profile_edit_user_middle_name">Укажите Ваше отчество</string>
    <string name="profile_edit_user_no_middle_name">Нет отчества</string>
    <string name="profile_edit_email_hint">E-mail</string>
    <string name="profile_edit_confirm_password">Подтвердить номер</string>
    <string name="profile_edit_phone_confirmed">Номер подтвержден</string>
    <string name="user_profile_last_name">Фамилия</string>
    <string name="user_profile_name">Имя</string>
    <string name="user_profile_middle_name">Отчество</string>
    <string name="user_profile_additional_hint">Не указано</string>
    <string name="user_profile_files_hint">Не указано</string>
    <string name="user_profile_no_social_networks">Нет соцсетей</string>
    <string name="user_profile_no_site">Нет сайта</string>
    <string name="user_profile_no_work_phone">Нет рабочего телефона</string>
    <string name="user_profile_show_to_everyone">Показывать всем</string>
    <string name="user_profile_password_title">Пароль</string>
    <string name="user_profile_email_title">Email</string>
    <string name="user_profile_privacy_hidden">   Не показывать профиль другим пользователям портала</string>
    <string name="user_profile_delete_profile">Удалить профиль</string>
    <string name="fill_field">Заполните поле</string>
    <string name="label_main_tab">Главная</string>
    <string name="label_my_events_tab">Мои мероприятия</string>
    <string name="notifications_tab_label">Уведомления</string>
    <string name="confidence_label">Конфиденциальность</string>
    <string name="control_sending">Управление рассылками</string>
    <string name="user_profile_off_messaging_projects">Отписаться от рассылки по проектам</string>
    <string name="user_profile_off_messaging_events">Отписаться от рассылки по мероприятиям</string>
    <string name="user_profile_off_messaging_organizations">Отписаться от рассылки по организациям</string>
    <string name="edit_name_title">Редактировать Ф. И. О.</string>
    <string name="you_does_not_have_password">У вас нет пароля</string>
    <string name="create_password">Создать пароль</string>
    <string name="user_linked_accounts">Связанные аккаунты</string>
    <string name="link_account">Привязать</string>
</resources>