<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main"
        android:icon="@drawable/ic_main_tab"
        android:title="@string/label_main_tab"
        app:showAsAction="always" />

    <item
        android:id="@+id/my_events"
        android:icon="@drawable/ic_my_events_tab"
        android:title="@string/label_my_events_tab"
        app:showAsAction="always" />

    <item
        android:id="@+id/chats"
        android:icon="@drawable/ic_chats_tab"
        android:title="@string/chat_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notifications_tab"
        android:title="@string/notifications_tab_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_tab"
        android:title="@string/profile_current_user_label"
        app:showAsAction="always" />

</menu>