<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_settings_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/main_background"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="10dp"
            style="@style/Profile.Edit.TextViewTitleThin"
            android:text="@string/user_profile_last_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserLastName"
            style="@style/ProfileData.TextView"
            android:hint="@string/profile_edit_user_surname" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Profile.Edit.TextViewTitleThin"
            android:text="@string/user_profile_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserName"
            style="@style/ProfileData.TextView"
            android:hint="@string/profile_edit_user_name" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Profile.Edit.TextViewTitleThin"
            android:text="@string/user_profile_middle_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserMiddleName"
            style="@style/ProfileData.TextView"
            android:hint="@string/profile_edit_user_middle_name" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/sc_no_middle_name"
            style="@style/Profile.Edit.Switch"
            android:layout_marginBottom="0dp"
            android:enabled="false"
            android:text="@string/profile_edit_user_no_middle_name" />

        <TextView
            android:id="@+id/tvEditName"
            style="@style/ClickableTextView"
            android:layout_marginBottom="5dp"
            android:text="@string/edit_name_title" />

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:id="@+id/tvShortname"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:visibility="gone"-->
<!--            app:hintText="@string/short_name_label"-->
<!--            app:inputEnabled="false"-->
<!--            app:titleText="@string/short_name_label" />-->


<!--        <TextView-->
<!--            android:id="@+id/tvEditShortName"-->
<!--            style="@style/ClickableTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:text="@string/edit_title"-->
<!--            android:visibility="gone" />-->

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Profile.Edit.TextViewTitleThin"
            android:text="@string/profile_phone_mobile" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneMobile"
            style="@style/ProfileData.TextView"
            tools:drawableEndCompat="@drawable/ic_confirmed_phone_icon"
            android:hint="@string/user_profile_files_hint" />

        <TextView
            android:id="@+id/tvEditPhone"
            style="@style/ClickableTextView"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"
            android:text="@string/edit_title" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Profile.Edit.TextViewTitleThin"
            android:text="@string/user_profile_email_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            style="@style/ProfileData.TextView"
            android:hint="@string/user_profile_files_hint" />

        <TextView
            android:id="@+id/tvEditEmail"
            style="@style/ClickableTextView"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"
            android:text="@string/edit_title" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Profile.Edit.TextViewTitleThin"
            android:text="@string/user_profile_password_title" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                style="@style/ProfileData.TextView"
                android:drawableStart="@drawable/ic_empty_password_icon"
                android:text="@string/you_does_not_have_password"
                tools:drawablePadding="10dp" />


            <com.example.ui.views.loading.CustomCircleLoadingButton
                android:id="@+id/btnCreatePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="5dp"
                app:circleButtonDrawable="@drawable/ic_circle_plus_icon"
                app:circleButtonText="@string/create_password" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEditPassword"
            style="@style/ClickableTextView"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"
            android:text="@string/profile_password_change" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAccountsTitle"
            style="@style/Profile.Edit.TextViewTitleThin"
            android:layout_marginTop="30dp"
            android:text="@string/user_linked_accounts" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_account_vk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/iv_vk_logo"
                android:layout_width="@dimen/linked_account_icon_size"
                android:layout_height="@dimen/linked_account_icon_size"
                android:src="@drawable/ic_vk_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/main_vk_blue_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_vk"
                fontPath="fonts/sf_pro_display_bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="VK"
                android:textSize="@dimen/linked_account_text_size"
                app:layout_constraintBottom_toBottomOf="@id/iv_vk_logo"
                app:layout_constraintStart_toEndOf="@id/iv_vk_logo"
                app:layout_constraintTop_toTopOf="@id/iv_vk_logo" />

            <com.example.ui.views.loading.CustomCircleLoadingButton
                android:id="@+id/btnLinkVk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:circleButtonDrawable="@drawable/ic_circle_plus_icon"
                app:circleButtonText="@string/link_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_account_gos_uslugi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv_gos_logo"
                android:layout_width="@dimen/linked_account_icon_size"
                android:layout_height="@dimen/linked_account_icon_size"
                android:src="@drawable/ic_gos_uslugi_logo_rect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_gos"
                fontPath="fonts/sf_pro_display_bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Госуслуги"
                android:textSize="@dimen/linked_account_text_size"
                app:layout_constraintBottom_toBottomOf="@id/iv_gos_logo"
                app:layout_constraintStart_toEndOf="@id/iv_gos_logo"
                app:layout_constraintTop_toTopOf="@id/iv_gos_logo" />

            <com.example.ui.views.loading.CustomCircleLoadingButton
                android:id="@+id/btnLinkGos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:circleButtonDrawable="@drawable/ic_circle_plus_icon"
                app:circleButtonText="@string/link_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Profile.Edit.TextViewTitleThin"
            android:text="@string/confidence_label" />

        <com.example.ui.views.CustomCheckView
            android:id="@+id/iv_privacy_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkViewText="@string/user_profile_privacy_hidden" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Profile.Edit.TextViewTitleThin"
            android:text="@string/control_sending" />

        <com.example.ui.views.CustomCheckView
            android:id="@+id/iv_block_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkViewText="@string/user_profile_off_messaging_projects" />

        <com.example.ui.views.CustomCheckView
            android:id="@+id/iv_block_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:checkViewText="@string/user_profile_off_messaging_events" />

        <com.example.ui.views.CustomCheckView
            android:id="@+id/iv_block_org"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:checkViewText="@string/user_profile_off_messaging_organizations" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteProfile"
            style="@style/BtnWhiteSmokeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:minHeight="@dimen/common_button_min_height"
            android:text="@string/user_profile_delete_profile"
            android:textColor="@color/title_text_error_red"
            android:textSize="@dimen/common_button_text_size" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>


