<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout style="@style/Profile.Edit.InputContainer">

        <com.example.ui.views.CustomTextInputLayout
            android:id="@+id/tilMobilePhone"
            style="@style/Profile.Edit.InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="custom"
            app:errorEnabled="true"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobilePhone"
                style="@style/Profile.Edit.Input.SingleLine"
                android:hint="@string/profile_phone_mobile"
                android:inputType="phone" />
        </com.example.ui.views.CustomTextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPhoneConfirm"
            style="@style/Profile.Edit.Button"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/profile_edit_confirm_password"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:minHeight="38dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/profile_edit_phone_confirmed"
            android:textColor="@color/profile_status_complete"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/scMobilePhone"
            style="@style/Profile.Edit.Switch"
            android:text="@string/user_profile_show_to_everyone"
            tools:checked="true" />
    </LinearLayout>

    <LinearLayout style="@style/Profile.Edit.InputContainer">

        <com.example.ui.views.CustomTextInputLayout
            android:id="@+id/tilWorkPhone"
            style="@style/Profile.Edit.InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="custom"
            app:errorEnabled="true"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWorkPhone"
                style="@style/Profile.Edit.Input.SingleLine"
                android:digits=" 0123456789()-+"
                android:hint="@string/profile_phone_work"
                android:inputType="phone" />
        </com.example.ui.views.CustomTextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/scShowWorkPhone"
            style="@style/Profile.Edit.Switch"
            android:text="@string/user_profile_show_to_everyone" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/scNoWorkPhone"
            style="@style/Profile.Edit.Switch"
            android:text="@string/user_profile_no_work_phone" />
    </LinearLayout>

    <LinearLayout
        style="@style/Profile.Edit.InputContainer"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="0dp">

        <LinearLayout
            android:id="@+id/llSocialNetworks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/networksError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/fill_field"
            android:textColor="@color/attention_action"
            android:layout_marginEnd="@dimen/margin_horizontal_default"
            tools:text="@string/fill_field"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSocialNetworkAdd"
            style="@style/Profile.Edit.Button"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_horizontal_default"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_sn_add" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/scNoSocialNetworks"
            style="@style/Profile.Edit.Switch"
            android:text="@string/user_profile_no_social_networks" />
    </LinearLayout>

    <LinearLayout style="@style/Profile.Edit.InputContainer">

        <com.example.ui.views.CustomTextInputLayout
            android:id="@+id/tilSite"
            style="@style/Profile.Edit.InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSite"
                style="@style/Profile.Edit.Input.SingleLine"
                android:hint="@string/profile_site"
                android:inputType="textWebEditText" />
        </com.example.ui.views.CustomTextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/scSite"
            style="@style/Profile.Edit.Switch"
            android:text="@string/user_profile_no_site" />
    </LinearLayout>

    <LinearLayout style="@style/Profile.Edit.InputContainer">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEmail"
            style="@style/Profile.Edit.Input.SingleLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="center_vertical"
            android:hint="@string/profile_edit_email_hint"
            android:textAllCaps="false"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/scShowEmail"
            style="@style/Profile.Edit.Switch"
            android:text="@string/profile_show_in_profile" />
    </LinearLayout>
</LinearLayout>